--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                      </div>
                   </div>
 
-                  <button class="add-btn accent"><i class="fa fa-plus"></i> Add Meal</button>
-                  <!-- <button class="update-btn light"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
+                  <button class="add-btn link"><i class="fa fa-plus"></i> Add Meal</button>
+                  <button class="update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
                   <button class="delete-btn danger"><i class="fa fa-remove"></i> Delete Meal</button>
-                  <button class="back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button> -->
+                  <button class="back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                </form>
             </div>
          </div>
