--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <div class="container">
          <div class="bg-light" style="max-width: 800px; margin: 0 auto;">
             <div class="p-3">
+               <div id="warning-box" style="color: #ce1c2e;
+               background-color: #eebabe; padding: 10px; border-radius: 4px; display: none;"></div>
                <h3>Add meal / Item</h3>
                <form action="">
                   <div class="row mobile-lg">
