--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <h2 class="m-0">CalTrack</h2>
             </div>
             <div class="col col-8">
-               <button class="primary float-right">Clear all</button>
+               <button class="primary float-right clear-btn">Clear all</button>
             </div>
          </div>
       </div>
