--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
          <div class="center-text col">
             <h1 class="m-0 pt-1 tablet-p-0">CalTrack</h1>
          </div>
-            <div class="row v-align-center col mobile-center-text pb-2 tablet-p-0">
-               <button class="dark">Button</button>
-               <button class="dark">Button</button>
-               <button class="dark">Button</button>
-            </div>
+         <div class="row v-align-center col mobile-center-text pb-2 tablet-p-0">
+            <button class="dark">Button</button>
+            <button class="dark">Button</button>
+            <button class="dark">Button</button>
+         </div>
       </div>
    </nav>
    </nav>
@@ -30,10 +30,11 @@
          <div id="output">
             <div class="center-text">
                <h1>
-                  <i class="fas fa-chevron-right fa-4x"></i>
-                  <h3>Step up your health game with caltrack. Enter your information for daily and weekly health
-                     updates.</h3>
+                  <i class="fas fa-running fa-3x"></i>
+                  <h2>Step up your health game with caltrack. Enter your information for daily and weekly health
+                     updates.</h2>
                </h1>
+               <button class="accent">Get started</button>
             </div>
          </div>
    </section>
