--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
 
 <head>
    <meta charset="UTF-8">
@@ -7,36 +7,33 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Calorie Tracker</title>
    <link rel="stylesheet" href="../Peach CSS/breeze.css">
-   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous">
 </head>
 
-<body>
-   <nav class="navbar bg-dark">
-      <div class="row v-align-center px-3">
-         <div class="center-text col">
-            <h1 class="m-0 pt-1 tablet-p-0">CalTrack</h1>
-         </div>
-         <div class="row v-align-center col mobile-center-text pb-2 tablet-p-0">
-            <button class="dark">Button</button>
-            <button class="dark">Button</button>
-            <button class="dark">Button</button>
-         </div>
-      </div>
-   </nav>
-   </nav>
-   <section class="bg-primary">
-      <div class="container">
-         <div id="output">
-            <div class="center-text">
-               <h1>
-                  <i class="fas fa-running fa-3x"></i>
-                  <h2>Step up your health game with caltrack. Enter your information for daily and weekly health
-                     updates.</h2>
-               </h1>
-               <button class="accent">Get started</button>
+<body class="bg-primary" style="height: 100%;">
+   <section class="bg-primary" style="height: 100%;">
+      <nav class="navbar transparent">
+         <div class="navbar-content">
+            <div class="navbar-left">
+               <h1 class="m-0">CalTrack</h1>
+            </div>
+            <div class="navbar-right">
+               <a href="login.html" class="button primary mr-1">Log In</a>
+               <a href="login.html" class="button accent">Sign Up</a>
             </div>
          </div>
+      </nav>
+      <div class="row full-width v-align-center my-5">
+         <div class="col">
+            <div class="container center-text" style="max-width: 650px;">
+               <i class="fas fa-running fa-5x"></i>
+               <h1 class='title'>Step up your exercise game with CalTrack</h1>
+               <h4 class="subtitle">CalTrack is the number one calories tracking app on the market.  Se why today.</h4>
+               <a href="login.html" class="button accent large">Get Started</a>
+            </div>
+         </div>
+      </div>
    </section>
    <script src="main.js"></script>
 </body>
