Finished login function- Call startNewSession()

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body class="bg-primary" style="height: 100%;">
    <div class="row mobile v-align-center">
       <div class="col col-12">
-         <div class="container">
+         <div class="container" id="container">
             <form style='max-width: 500px; margin: 0 auto;'>
                <h1 class="center-text">Sign up to CalTrack</h1>
                <div class="input-element medium">
@@ -36,6 +36,7 @@
    </div>
 
    <script src="data.js"></script>
+   <script src="session.js"></script>
    <script src="signup.js"></script>
 </body>
 
