--- a/login.html
+++ b/login.html
@@ -15,29 +15,25 @@
    <div class="row mobile v-align-center">
       <div class="col col-12">
          <div class="container" id="container">
-            <form style='max-width: 500px; margin: 0 auto;'>
-               <h1 class="center-text">Sign up to CalTrack</h1>
-               <div class="input-element medium">
-                  <label for="">Name</label>
-                  <input type="text" class="full-width" placeholder="Name" id="signupName">
-               </div>
-               <div class="input-element medium">
-                  <label for="">Username</label>
-                  <input type="text" class="full-width" placeholder="Username" id="signupUsername">
-               </div>
-               <div class="input-element medium">
-                  <label for="">Password</label>
-                  <input type="password" class="full-width" placeholder="Password" id="signupPassword">
-               </div>
-               <input type="submit" value="Sign Up" class="accent medium full-width" id="signupBtn">
-            </form>
+               <form style='max-width: 500px; margin: 0 auto;'>
+                     <h1 class="center-text">Log In</h1>
+                     <div class="input-element medium">
+                        <label for="">Username</label>
+                        <input type="text" class="full-width loginUsername" placeholder="Username" id="loginUsername">
+                     </div>
+                     <div class="input-element medium">
+                        <label for="">Password</label>
+                        <input type="password" class="full-width loginPassword" placeholder="Password" id="loginPassword">
+                     </div>
+                     <input type="submit" value="Log In" class="accent medium full-width loginBtn" id="loginBtn">
+                  </form>
          </div>
       </div>
    </div>
 
    <script src="data.js"></script>
    <script src="session.js"></script>
-   <script src="signup.js"></script>
+   <script src="login.js"></script>
 </body>
 
 </html>
