--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-right">
                <a href="login.html" class="button primary mr-1">Log In</a>
-               <a href="login.html" class="button accent">Sign Up</a>
+               <a href="signup.html" class="button accent">Sign Up</a>
             </div>
          </div>
       </nav>
@@ -35,7 +35,6 @@
          </div>
       </div>
    </section>
-   <script src="main.js"></script>
 </body>
 
 </html>
