--- a/session.html
+++ b/session.html
@@ -12,12 +12,34 @@
 </head>
 
 <body>
-   
+   <nav class="navbar white" style="border-bottom: 2px solid #00c6e0;">
+      <div class="navbar-content">
+         <div class="navbar-left center-text tablet-text-align-left">
+            <h1>CalTrack</h1>
+         </div>
+         <div class="navbar-right">
+            <ul class="menu">
+               <li class="menu-item"><a href="">View Meals</a></li>
+               <li class="menu-item"><a href="">View Workouts</a></li>
+               <li class="menu-item"><a href="">Dashboard</a></li>
+            </ul>
+         </div>
+      </div>
+   </nav>
+   <section>
+      <div class="container" id="container">
+         <div class="row mobile">
+            <div class="col mobile-col-12 summary dashboard-item">
+               <div class="center-text">
+                  <h3>500 Calories Gained</h3>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
 
    <script src="data.js"></script>
    <script src="session.js"></script>
-   <script src="signup.js"></script>
-   
 </body>
 
 </html>
