Add dashboard items

--- a/session.html
+++ b/session.html
@@ -9,6 +9,13 @@
    <link rel="stylesheet" href="../Peach CSS/breeze.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous">
+   <style>
+      .dashboard-item {
+         border-radius: 1px;
+         padding: 15px;
+         border: 1px solid #d4d4d4;
+      }
+   </style>
 </head>
 
 <body>
@@ -29,9 +36,37 @@
    <section>
       <div class="container" id="container">
          <div class="row mobile">
-            <div class="col mobile-col-12 summary dashboard-item">
-               <div class="center-text">
-                  <h3>500 Calories Gained</h3>
+            <div class="col mobile-col-12">
+               <div class="center-text dashboard-item">
+                  <h3>800 Net Calorie Gain</h3>
+               </div>
+            </div>
+         </div>
+         <div class="row mobile">
+            <div class="col">
+               <div class="dashboard-item center-text">
+                  <h5>1600 calories gained</h5>
+                  <small>
+                     <ul class="collection rounded align-text-left">
+                        <li class="collection-item"><strong>Cardio</strong> <em class="right">300 calories gained</em></li>
+                        <li class="collection-item"><strong>Dinner</strong> <em class="right">100 calories gained</em></li>
+                        <li class="collection-item"><strong>Snack</strong> <em class="right">50 calories gained</em></li>
+                     </ul>
+                     <button class="small accent">See more meals</button>
+                  </small>
+               </div>
+            </div>
+            <div class="col">
+               <div class="dashboard-item center-text">
+                  <h5>800 calories lost</h5>
+                  <small>
+                     <ul class="collection rounded align-text-left">
+                        <li class="collection-item"><strong>Cardio</strong> <em class="right">300 calories burned</em></li>
+                        <li class="collection-item"><strong>Pushups</strong> <em class="right">100 calories burned</em></li>
+                        <li class="collection-item"><strong>Run</strong> <em class="right">150 calories burned</em></li>
+                     </ul>
+                     <button class="small accent">See more workouts</button>
+                  </small>
                </div>
             </div>
          </div>
