Login functionality works

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous">
 </head>
 
-<body class="bg-primary" style="height: 100%;">
+<body style="height: 100%;">
    <div class="row mobile v-align-center">
       <div class="col col-12">
          <div class="container" id="container">
@@ -32,8 +32,8 @@
    </div>
 
    <script src="data.js"></script>
-   <script src="session.js"></script>
    <script src="login.js"></script>
+   <script src="session.js"></script>
 </body>
 
 </html>
