Meals add to current user

--- a/meals.html
+++ b/meals.html
@@ -61,7 +61,9 @@
          </ul>
       </div>
    </section>
-   <script src="main.js"></script>
+   <script src="data.js"></script>
+   <script src="session.js"></script>
+   <script src="meals.js"></script>
 </body>
 
 </html>
