--- a/session.html
+++ b/session.html
@@ -40,8 +40,8 @@
    </section>
 
    <script src="data.js"></script>
-   <!-- <script src="meals.js"></script>
-   <script src="workouts.js"></script> -->
+   <script src="meals.js"></script>
+   <!-- <script src="workouts.js"></script> -->
    <script src="session.js"></script>
 </body>
 
