--- a/workouts.html
+++ b/workouts.html
@@ -7,19 +7,19 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Calorie Tracker</title>
    <link rel="stylesheet" href="../Peach CSS/breeze.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous">
 </head>
 
 <body>
    <nav class="bg-primary">
-      <div class="pl-2">
+      <div class="container p-0">
          <div class="row mobile v-align-center">
-            <div class="col">
+            <div class="col-4 col">
                <h2 class="m-0">CalTrack</h2>
             </div>
             <div class="col col-8">
-               <button class="primary mt-1 float-right clear-btn">Clear All</button>
+               <button class="primary float-right clear-btn">Clear all</button>
             </div>
          </div>
       </div>
@@ -30,31 +30,31 @@
             <div class="p-3">
                <div id="warning-box" style="color: #ce1c2e;
                background-color: #eebabe; padding: 10px; border-radius: 4px; display: none;"></div>
-               <h3>Add meal / Item</h3>
+               <h3>Add Workout</h3>
                <form action="">
                   <div class="row mobile-lg">
                      <div class="col-6 col">
                         <div class="input-element medium">
-                           <label for="">Meal</label>
+                           <label for="">Workout Description</label>
                            <input class="full-width" type="text" id="item-name" placeholder="Add item...">
                         </div>
                      </div>
                      <div class="col-6 col">
                         <div class="input-element medium">
-                           <label for="">Calories</label>
+                           <label for="">Calories Burned</label>
                            <input class="full-width" type="number" placeholder="Add calories" id="item-calories">
                         </div>
                      </div>
                   </div>
 
-                  <button class="add-btn link"><i class="fa fa-plus"></i> Add Meal</button>
-                  <button class="update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
-                  <button class="delete-btn danger"><i class="fa fa-remove"></i> Delete Meal</button>
+                  <button class="add-btn link"><i class="fa fa-plus"></i> Add Workout</button>
+                  <button class="update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Workout</button>
+                  <button class="delete-btn danger"><i class="fa fa-remove"></i> Delete Workout</button>
                   <button class="back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                </form>
             </div>
          </div>
-         <h2 class="center-text py-3">Total Calories: <span class="total-calories"></span></h2>
+         <h2 class="center-text py-3">Total Calories Burned: <span class="total-calories"></span></h2>
 
          <ul id="item-list" class="collection">
 
@@ -63,7 +63,7 @@
    </section>
    <script src="data.js"></script>
    <script src="session.js"></script>
-   <script src="meals.js"></script>
+   <script src="workouts.js"></script>
 </body>
 
 </html>
