--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="container center-text" style="max-width: 650px;">
                <i class="fas fa-running fa-5x"></i>
                <h1 class='title'>Step up your exercise game with CalTrack</h1>
-               <h4 class="subtitle">CalTrack is the number one calories tracking app on the market.  Se why today.</h4>
-               <a href="login.html" class="button accent large">Get Started</a>
+               <h4 class="subtitle">CalTrack is the number one calories tracking app on the market.  See why today.</h4>
+               <a href="signup.html" class="button accent large">Get Started</a>
             </div>
          </div>
       </div>
