--- a/meals.html
+++ b/meals.html
@@ -56,7 +56,7 @@
          </div>
          <h2 class="center-text py-3">Total Calories: <span class="total-calories"></span></h2>
 
-         <ul id="item-list" class="collection">
+         <ul id="item-list" class="collection" style="max-width: 800px; margin: 0 auto;">
 
          </ul>
       </div>
