Update nav items

--- a/session.html
+++ b/session.html
@@ -31,50 +31,16 @@
          </div>
          <div class="navbar-right">
             <ul class="menu">
-               <li class="menu-item mr-2"><a href="workouts.html"><i class="fas fa-running fa-2x"></i></a></li>
-               <li class="menu-item mr-2"><a href="meals.html"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item"><a href="session.html"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item mr-2 addWorkout"><a href="workouts.html"><i class="fas fa-running fa-2x"></i></a></li>
+               <li class="menu-item mr-2 addMeal"><a href="meals.html"><i class="fas fa-hamburger fa-2x"></i></a></li>
+               <li class="menu-item dashboard"><a href="session.html"><i class="fas fa-th-large fa-2x"></i></a></li>
             </ul>
          </div>
       </div>
    </nav>
    <section>
       <div class="container" id="container">
-         <div class="m-auto center-text">
-            <h1 class="title">Welcome back, Jarod!</h1>
-            <h3 class="subtitle">Here's a summary of your calorie activity.</h3>
-         </div>
-         <div class="row">
-            <div class="col mobile-col-12 center-text">
-               <div class="dashboard-item">
-                  <h2 class="m-0">Total Calories: 570</h2>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col">
-               <div class="dashboard-item center-text">
-                  <h4>Calories Gained</h4>
-                  <ul class="collection align-text-left">
-                     <li class="collection-item">Item 1 <div class="right">780 Calories</div></li>
-                     <li class="collection-item">Item 2 <div class="right">175 Calories</div></li>
-                     <li class="collection-item">Item 3 <div class="right">500 Calories</div></li>
-                  </ul>
-                  <button class="accent addMeal m-0">See more meals</button>
-               </div>
-            </div>
-            <div class="col">
-               <div class="dashboard-item center-text">
-                  <h4>Calories Lost</h4>
-                  <ul class="collection align-text-left">
-                     <li class="collection-item">Item 1 <div class="right">500 Calories</div></li>
-                     <li class="collection-item">Item 2 <div class="right">250 Calories</div></li>
-                     <li class="collection-item">Item 3 <div class="right">80 Calories</div></li>
-                  </ul>
-                  <button class="accent addMeal m-0">See more workouts</button>
-               </div>
-            </div>
-         </div>
+
       </div>
    </section>
 
