--- a/workouts.html
+++ b/workouts.html
@@ -21,7 +21,7 @@
             <ul class="menu">
                <li class="menu-item mr-2"><a href="workouts.html"><i class="fas fa-running fa-2x"></i></a></li>
                <li class="menu-item mr-2"><a href="meals.html"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item"><a href="session.html"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item"><a href="dashboard.html"><i class="fas fa-th-large fa-2x"></i></a></li>
             </ul>
          </div>
       </div>
@@ -65,7 +65,6 @@
       </div>
    </section>
    <script src="data.js"></script>
-   <script src="session.js"></script>
    <script src="workouts.js"></script>
 </body>
 
