--- a/meals.html
+++ b/meals.html
@@ -19,9 +19,9 @@
          </div>
          <div class="navbar-right">
             <ul class="menu">
-               <li class="menu-item mr-2 addWorkout"><a href="workouts.html"><i class="fas fa-running fa-2x"></i></a></li>
-               <li class="menu-item mr-2 addMeal"><a href="meals.html"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item dashboard"><a href="session.html"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item mr-2"><a class="workouts"><i class="fas fa-running fa-2x"></i></a></li>
+               <li class="menu-item mr-2"><a class="meals"><i class="fas fa-hamburger fa-2x"></i></a></li>
+               <li class="menu-item"><a class="dashboard"><i class="fas fa-th-large fa-2x"></i></a></li>
             </ul>
          </div>
       </div>
