--- a/workouts.html
+++ b/workouts.html
@@ -7,7 +7,7 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Calorie Tracker</title>
    <link rel="stylesheet" href="../Peach CSS/breeze.css">
-   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous">
 </head>
 
@@ -19,9 +19,9 @@
          </div>
          <div class="navbar-right">
             <ul class="menu">
-               <li class="menu-item mr-2"><a href="workouts.html"><i class="fas fa-running fa-2x"></i></a></li>
-               <li class="menu-item mr-2"><a href="meals.html"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item"><a href="dashboard.html"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item mr-2"><a class="workouts"><i class="fas fa-running fa-2x"></i></a></li>
+               <li class="menu-item mr-2"><a class="meals"><i class="fas fa-hamburger fa-2x"></i></a></li>
+               <li class="menu-item"><a class="dashboard"><i class="fas fa-th-large fa-2x"></i></a></li>
             </ul>
          </div>
       </div>
