Update container width

--- a/meals.html
+++ b/meals.html
@@ -27,8 +27,8 @@
       </div>
    </nav>
    <section>
-      <div class="container">
-         <div class="bg-light" style="max-width: 800px; margin: 0 auto;">
+      <div class="container" style="max-width: 800px; margin: 0 auto;">
+         <div class="bg-light">
             <div class="p-3">
                <div id="warning-box" style="color: #ce1c2e;
                background-color: #eebabe; padding: 10px; border-radius: 4px; display: none;"></div>
@@ -56,7 +56,7 @@
                </form>
             </div>
          </div>
-         <h2 class="center-text py-3">Total Calories: <span class="total-calories"></span></h2>
+         <h2 class="center-text py-3">Total Calories Gained: <span class="total-calories"></span></h2>
 
          <ul id="item-list" class="collection" style="max-width: 800px; margin: 0 auto;">
 
