--- a/workouts.html
+++ b/workouts.html
@@ -27,8 +27,8 @@
       </div>
    </nav>
    <section>
-      <div class="container">
-         <div class="bg-light" style="max-width: 800px; margin: 0 auto;">
+      <div class="container" style="max-width: 800px; margin: 0 auto;">
+         <div class="bg-light">
             <div class="p-3">
                <div id="warning-box" style="color: #ce1c2e;
                background-color: #eebabe; padding: 10px; border-radius: 4px; display: none;"></div>
