--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,10 @@
             <ul class="menu">
                <li class="menu-item mr-2 addWorkout"><a href="workouts.html"><i class="fas fa-running fa-2x"></i></a></li>
                <li class="menu-item mr-2 addMeal"><a href="meals.html"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item dashboard"><a href="dashboard.html"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item mr-2 dashboard"><a href="dashboard.html"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item logout">
+                  <a><i class="fa fa-lock fa-2x"></i></a>
+               </li>
             </ul>
          </div>
       </div>
