--- a/meals.html
+++ b/meals.html
@@ -21,7 +21,10 @@
             <ul class="menu">
                <li class="menu-item mr-2"><a class="workouts"><i class="fas fa-running fa-2x"></i></a></li>
                <li class="menu-item mr-2"><a class="meals"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item"><a class="dashboard"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item mr-2"><a class="dashboard"><i class="fas fa-th-large fa-2x"></i></a></li>
+               <li class="menu-item logout">
+                  <a><i class="fa fa-lock fa-2x"></i></a>
+               </li>
             </ul>
          </div>
       </div>
