--- a/meals.html
+++ b/meals.html
@@ -19,11 +19,31 @@
          </div>
          <div class="navbar-right">
             <ul class="menu">
-               <li class="menu-item mr-2"><a class="workouts"><i class="fas fa-running fa-2x"></i></a></li>
-               <li class="menu-item mr-2"><a class="meals"><i class="fas fa-hamburger fa-2x"></i></a></li>
-               <li class="menu-item mr-2"><a class="dashboard"><i class="fas fa-th-large fa-2x"></i></a></li>
-               <li class="menu-item logout">
-                  <a><i class="fa fa-lock fa-2x"></i></a>
+               <li class="menu-item subtext mr-2 workouts">
+                  <a href="workouts.html">
+                     <i class="fas fa-running fa-2x"></i>
+                  </a>
+                  <div class="subtext"><a href="workouts.html">Workouts</a></div>
+               </li>
+               <li class="menu-item subtext mr-2 meals">
+                  <a href="meals.html">
+                     <i class="fas fa-hamburger fa-2x"></i>
+                  </a>
+                  <div class="subtext"><a href="meals.html">Meals</a></div>
+
+               </li>
+               <li class="menu-item subtext mr-2 dashboard">
+                  <a href="dashboard.html">
+                     <i class="fas fa-th-large fa-2x"></i>
+                  </a>
+                  <div class="subtext"><a href="dashboard.html">Dashboard</a></div>
+
+               </li>
+               <li class="menu-item subtext logout">
+                  <a>
+                     <i class="fa fa-lock fa-2x"></i>
+                  </a>
+                  <div class="subtext"><a class="logout">Logout</a></div>
                </li>
             </ul>
          </div>
