--- a/login.html
+++ b/login.html
@@ -15,18 +15,18 @@
    <div class="row mobile v-align-center">
       <div class="col col-12">
          <div class="container" id="container">
-               <form style='max-width: 500px; margin: 0 auto;'>
-                     <h1 class="center-text">Log In</h1>
-                     <div class="input-element medium">
-                        <label for="">Username</label>
-                        <input type="text" class="full-width loginUsername" placeholder="Username" id="loginUsername">
-                     </div>
-                     <div class="input-element medium">
-                        <label for="">Password</label>
-                        <input type="password" class="full-width loginPassword" placeholder="Password" id="loginPassword">
-                     </div>
-                     <input type="submit" value="Log In" class="accent medium full-width loginBtn" id="loginBtn">
-                  </form>
+            <form style='max-width: 500px; margin: 0 auto;'>
+               <h1 class="center-text">Log In</h1>
+               <div class="input-element medium">
+                  <label for="">Username</label>
+                  <input type="text" class="full-width loginUsername" placeholder="Username" id="loginUsername">
+               </div>
+               <div class="input-element medium">
+                  <label for="">Password</label>
+                  <input type="password" class="full-width loginPassword" placeholder="Password" id="loginPassword">
+               </div>
+               <button class="accent medium full-width m-0 loginBtn" id="loginBtn">Sign Up</button>
+            </form>
          </div>
       </div>
    </div>
