--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
                <label for="">Password</label>
                <input type="password" class="full-width" placeholder="Password" id="signupPassword">
             </div>
-            <input type="submit" value="Sign Up" class="accent medium full-width" id="signupBtn">
+            <button class="accent medium full-width m-0" id="signupBtn">Sign Up</button>
          </form>
       </div>
    </div>
