--- a/meals.html
+++ b/meals.html
@@ -72,10 +72,10 @@
                      </div>
                   </div>
 
-                  <button class="add-btn link"><i class="fa fa-plus"></i> Add Meal</button>
-                  <button class="update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
-                  <button class="delete-btn danger"><i class="fa fa-remove"></i> Delete Meal</button>
-                  <button class="back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
+                  <button class="add-btn m-0 link"><i class="fa fa-plus"></i> Add Meal</button>
+                  <button class="update-btn m-0 accent"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
+                  <button class="delete-btn m-0 danger"><i class="fa fa-remove"></i> Delete Meal</button>
+                  <button class="back-btn m-0 light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                </form>
             </div>
          </div>
