Update button margin

--- a/workouts.html
+++ b/workouts.html
@@ -72,10 +72,10 @@
                      </div>
                   </div>
 
-                  <button class="add-btn link"><i class="fa fa-plus"></i> Add Workout</button>
-                  <button class="update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Workout</button>
-                  <button class="delete-btn danger"><i class="fa fa-remove"></i> Delete Workout</button>
-                  <button class="back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
+                  <button class="m-0 add-btn link"><i class="fa fa-plus"></i> Add Workout</button>
+                  <button class="m-0 update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Workout</button>
+                  <button class="m-0 delete-btn danger"><i class="fa fa-remove"></i> Delete Workout</button>
+                  <button class="m-0 back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                </form>
             </div>
          </div>
