Add delete account

--- a/dashboard.html
+++ b/dashboard.html
@@ -51,11 +51,17 @@
                   <div class="subtext"><a href="dashboard.html">Dashboard</a></div>
 
                </li>
-               <li class="menu-item subtext logout">
+               <li class="menu-item account">
                   <a>
-                     <i class="fa fa-lock fa-2x"></i>
+                     <i class="fa fa-user fa-2x"></i>
                   </a>
-                  <div class="subtext"><a class="logout">Logout</a></div>
+                  <ul class="menu">
+                     <li class="menu-item logout"> Logout
+                     </li>
+                     <li class="menu-item deleteAccount">
+                        Delete Account
+                     </li>
+                  </ul>
                </li>
             </ul>
          </div>
@@ -63,7 +69,7 @@
    </nav>
    <section>
       <div class="container" id="container">
-
+         
       </div>
    </section>
 
