--- a/workouts.html
+++ b/workouts.html
@@ -50,7 +50,7 @@
       </div>
    </nav>
    <section>
-      <div class="container" style="max-width: 800px; margin: 0 auto;">
+      <div class="container" id="container" style="max-width: 800px; margin: 0 auto;">
          <div class="bg-light">
             <div class="p-3">
                <div id="warning-box" style="color: #ce1c2e;
