--- a/meals.html
+++ b/meals.html
@@ -19,13 +19,13 @@
          </div>
          <div class="navbar-right">
             <ul class="menu">
-               <li class="menu-item subtext mr-2 workouts">
+               <li class="menu-item subtext mr-2 addWorkout">
                   <a href="workouts.html">
                      <i class="fas fa-running fa-2x"></i>
                   </a>
                   <div class="subtext"><a href="workouts.html">Workouts</a></div>
                </li>
-               <li class="menu-item subtext mr-2 meals">
+               <li class="menu-item subtext mr-2 addMeal">
                   <a href="meals.html">
                      <i class="fas fa-hamburger fa-2x"></i>
                   </a>
@@ -39,11 +39,17 @@
                   <div class="subtext"><a href="dashboard.html">Dashboard</a></div>
 
                </li>
-               <li class="menu-item subtext logout">
+               <li class="menu-item account">
                   <a>
-                     <i class="fa fa-lock fa-2x"></i>
+                     <i class="fa fa-user fa-2x"></i>
                   </a>
-                  <div class="subtext"><a class="logout">Logout</a></div>
+                  <ul class="menu">
+                     <li class="menu-item logout"> Logout
+                     </li>
+                     <li class="menu-item deleteAccount">
+                        Delete Account
+                     </li>
+                  </ul>
                </li>
             </ul>
          </div>
