--- a/meals.html
+++ b/meals.html
@@ -19,25 +19,23 @@
          </div>
          <div class="navbar-right">
             <ul class="menu">
-               <li class="menu-item subtext mr-2 addWorkout">
+               <li class="menu-item subtext mr-2 workouts">
                   <a href="workouts.html">
                      <i class="fas fa-running fa-2x"></i>
                   </a>
                   <div class="subtext"><a href="workouts.html">Workouts</a></div>
                </li>
-               <li class="menu-item subtext mr-2 addMeal">
+               <li class="menu-item subtext mr-2 meals">
                   <a href="meals.html">
                      <i class="fas fa-hamburger fa-2x"></i>
                   </a>
-                  <div class="subtext"><a href="meals.html">Meals</a></div>
-
+                  <div class="subtext meals"><a href="meals.html">Meals</a></div>
                </li>
                <li class="menu-item subtext mr-2 dashboard">
                   <a href="dashboard.html">
                      <i class="fas fa-th-large fa-2x"></i>
                   </a>
                   <div class="subtext"><a href="dashboard.html">Dashboard</a></div>
-
                </li>
                <li class="menu-item account">
                   <a>
