--- a/workouts.html
+++ b/workouts.html
@@ -53,10 +53,10 @@
          </div>
       </div>
    </nav>
-   <section>
+   <section class="bg-light">
       <div class="container" id="container" style="max-width: 800px; margin: 0 auto;">
-         <div class="bg-light">
-            <div class="p-3">
+         <div>
+            <div>
                <div id="warning-box" style="color: #ce1c2e;
                background-color: #eebabe; padding: 10px; border-radius: 4px; display: none;"></div>
                <h3>Add Workout</h3>
