--- a/meals.html
+++ b/meals.html
@@ -74,12 +74,13 @@
                            <input class="full-width" type="number" placeholder="Add calories" id="item-calories">
                         </div>
                      </div>
+                     <div class="col-12 col">
+                        <button class="m-0 add-btn link"><i class="fa fa-plus"></i> Add Workout</button>
+                        <button class="m-0 update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Workout</button>
+                        <button class="m-0 delete-btn danger"><i class="fa fa-remove"></i> Delete Workout</button>
+                        <button class="m-0 back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
+                     </div>
                   </div>
-
-                  <button class="add-btn m-0 link"><i class="fa fa-plus"></i> Add Meal</button>
-                  <button class="update-btn m-0 accent"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
-                  <button class="delete-btn m-0 danger"><i class="fa fa-remove"></i> Delete Meal</button>
-                  <button class="back-btn m-0 light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                </form>
             </div>
          </div>
