--- a/workouts.html
+++ b/workouts.html
@@ -53,10 +53,10 @@
          </div>
       </div>
    </nav>
-   <section class="bg-light">
+   <section>
       <div class="container" id="container" style="max-width: 800px; margin: 0 auto;">
-         <div>
-            <div>
+         <div class="bg-light">
+            <div style="padding: 10px;">
                <div id="warning-box" style="color: #ce1c2e;
                background-color: #eebabe; padding: 10px; border-radius: 4px; display: none;"></div>
                <h3>Add Workout</h3>
@@ -74,12 +74,13 @@
                            <input class="full-width" type="number" placeholder="Add calories" id="item-calories">
                         </div>
                      </div>
+                     <div class="col-12 col">
+                        <button class="m-0 add-btn link"><i class="fa fa-plus"></i> Add Workout</button>
+                        <button class="m-0 update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Workout</button>
+                        <button class="m-0 delete-btn danger"><i class="fa fa-remove"></i> Delete Workout</button>
+                        <button class="m-0 back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
+                     </div>
                   </div>
-
-                  <button class="m-0 add-btn link"><i class="fa fa-plus"></i> Add Workout</button>
-                  <button class="m-0 update-btn accent"><i class="fa fa-pencil-square-o"></i> Update Workout</button>
-                  <button class="m-0 delete-btn danger"><i class="fa fa-remove"></i> Delete Workout</button>
-                  <button class="m-0 back-btn light float-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                </form>
             </div>
          </div>
